# ZoneMakers-back

./: .gitignore  Cargo.toml  README.MD  db.sqlite  devenv.nix  package-lock.json  package.json  readybuild.bat  rustfmt.toml
src/: delete_user.rs  get_user.rs  main.rs  post_login.rs  post_user.rs  put_user.rs
src/endpoints/: delete_admin_support.rs  delete_notification.rs  delete_user.rs  get_admin_support_all.rs  get_notifications.rs  get_user.rs  mod.rs  patch_avatar.rs  patch_banner.rs  patch_bio.rs  patch_email.rs  patch_handle.rs  patch_name.rs  patch_notification_read.rs  patch_password.rs  patch_pinned_badges.rs  post_login.rs  post_notification.rs  post_support.rs  post_user.rs  put_user.rs
src/endpoints/auth/: mod.rs  post_login.rs  post_user.rs
src/endpoints/badges/: delete_badge.rs  get_badge.rs  get_badge_all.rs  mod.rs  post_admin_grant_badge.rs  post_admin_remove_badge.rs  post_badge.rs
src/endpoints/notifications/: mod.rs
src/endpoints/posts/: delete_post.rs  get_post_replies.rs  get_posts.rs  mod.rs  patch_post.rs  post_post.rs
src/endpoints/reports/: delete_report.rs  get_reports.rs  mod.rs  post_report.rs
src/endpoints/support/: delete_admin_support.rs  mod.rs
src/endpoints/travel/: delete_travel.rs  get_travel.rs  mod.rs  post_travel.rs
src/endpoints/users/: delete_user.rs  get_user.rs  get_user_handle.rs  mod.rs  patch_avatar.rs  patch_email.rs  patch_name.rs  patch_password.rs  patch_region.rs  patch_theme.rs  post_rep.rs
src/endpoints/zones/: delete_zone.rs  get_admin_zones_requests.rs  get_zone_id.rs  (+7 more)
src/tests/: user.test.ts
